# crucible

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.history/: .gitignore_20260320193238
config/: models.yaml  settings.yaml  tools.yaml
crucible/: __init__.py  __main__.py  cli.py  config.py
crucible/context/: __init__.py
crucible/engine/: __init__.py  orchestrator.py  scheduler.py
crucible/engine/phases/: __init__.py  attack.py  base.py  map.py  meta_review.py  survey.py  synthesize.py
crucible/frontier/: __init__.py
crucible/genesis/: __init__.py
crucible/graph/: __init__.py  decay.py  embeddings.py  entity_resolution.py  store.py
crucible/journal/: __init__.py
crucible/memory/: __init__.py
crucible/models/: __init__.py  client.py  manager.py
crucible/parsing/: __init__.py
crucible/schemas/: __init__.py
crucible/tools/: __init__.py  apis.py
prompts/: auditor.md  cartographer.md  demolisher.md  integrator.md  prospector.md
scripts/: dialectic.sh  scout.sh
