[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "crucible"
version = "0.1.0"
description = "A Local Autonomous Research Engine with Dialectical Reasoning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.0",
    "neo4j>=5.0",
    "qdrant-client>=1.9.0",
    "mem0ai>=0.1.0",
    "sentence-transformers>=3.0",
    "docling>=2.0",
    "httpx>=0.27",
    "openai>=1.30",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.1",
    "tenacity>=8.0",
]

[project.scripts]
crucible = "crucible.cli:main"

[tool.setuptools.packages.find]
include = ["crucible*"]
